@@ -7,8 +7,6 @@ TODO
 
 --- Code Enhancements ---
 
-	* Show poll results @ admin page
-	* Show the exact URL of the comment @ admin page
 	* sticky entries
 	* HTML editor
 	* writing comments without having an account
