@@ -22,12 +22,18 @@ class Comments(models.Model):
 	def get_entry_name(self):
 		return self.entry.title
 
-	get_entry_name.short_description = "Entry Title"
+	get_entry_name.short_description = u"Entry Title"
+	
+	def get_entry_url(self):
+		return u"<a href='%s' title='click here to see this blog entry..' target='_blank'>See Blog Entry</a>" % self.entry.get_full_url()
+		
+	get_entry_url.short_description = u"Entry URL"
+	get_entry_url.allow_tags = True
 
 	def get_datetime(self):
 		return self.datetime.strftime("%d.%m.%Y @ %H:%M")
 
-	get_datetime.short_description = "Comment Written On"
+	get_datetime.short_description = u"Comment Written On"
 
 	def get_author_info(self):
 		un = self.author.username
@@ -35,8 +41,8 @@ class Comments(models.Model):
 		aun = self.anonymous_author
 		aue = self.anonymous_author_email
 		if un == "anonymous":
-			return "%s - <a href='mailto: %s' title='click here to send an e-mail to the user..'>%s</a>" % (aun, aue, aue)
-		return "%s - <a href='mailto: %s' title='click here to send an e-mail to the user..'>%s</a>" % (un, ue, ue)
+			return u"%s - <a href='mailto: %s' title='click here to send an e-mail to the user..'>%s</a>" % (aun, aue, aue)
+		return u"%s - <a href='mailto: %s' title='click here to send an e-mail to the user..'>%s</a>" % (un, ue, ue)
 
 	get_author_info.short_description = "User Info"
 	get_author_info.allow_tags = True
@@ -48,10 +54,10 @@ class Comments(models.Model):
 			if aws == "":
 				return ""
 			else:
-				return "<a href='%s' title='click here to visit the user\'s web site..' target='_blank'>%s</a>" % (aws, aws)
-		return "<a href='%s' title='click here to visit the user\'s web site..' target='_blank'>%s</a>" % (ws, ws)
+				return u"<a href='%s' title='click here to visit the user\'s web site..' target='_blank'>%s</a>" % (aws, aws)
+		return u"<a href='%s' title='click here to visit the user\'s web site..' target='_blank'>%s</a>" % (ws, ws)
 	
-	get_author_web_site.short_description = "User Web Site"
+	get_author_web_site.short_description = u"User Web Site"
 	get_author_web_site.allow_tags = True
 
 	class Meta:
