@@ -301,14 +301,14 @@ blockquote {
 }
 
 .entry_title {
-	float: left;
+	clear: both;
 	width: 100%;
 	padding-bottom: 5px;
 	font-size: 20px;
 }
 
 .entry_tags {
-	float: left;
+	clear: both;
 	width: 100%;
 	font-size: 12px;
 	color: gray;
@@ -316,6 +316,15 @@ blockquote {
 
 .entry_tags a {
 	margin-right: 7px;
+}
+
+.entry_admin {
+	clear: both;
+	margin-top: 3px;
+}
+
+.entry_admin a {
+	text-decoration: none;
 }
 
 .entry_body {
